msa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # auth-service의 /api/auth 경로
      - path: /api/auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 8000

      # (예) board-service는 /api/board로 연결
      - path: /api/board(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: board-service
            port:
              number: 8000

      # 프론트엔드
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80
